# ego-planner-swarm

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  Readme.md  package.xml
src/planner/bspline_opt/: CMakeLists.txt  package.xml
src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h  gradient_descent_optimizer.h  lbfgs.hpp  uniform_bspline.h
src/planner/bspline_opt/src/: bspline_optimizer.cpp  gradient_descent_optimizer.cpp  uniform_bspline.cpp
src/planner/drone_detect/: CMakeLists.txt  README.md  package.xml
src/planner/drone_detect/config/: camera.yaml  default.yaml
src/planner/drone_detect/include/drone_detect/: drone_detector.h
src/planner/drone_detect/launch/: drone_detect.launch.py  ros_package_template_overlying_params.launch.py
src/planner/drone_detect/src/: drone_detect_node.cpp  drone_detector.cpp
src/planner/drone_detect/test/: test_drone_detector.cpp
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: dyn_a_star.h
src/planner/path_searching/src/: dyn_a_star.cpp
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: grid_map.h  linear_obj_model.hpp  obj_predictor.h  raycast.h
src/planner/plan_env/src/: grid_map.cpp  obj_generator.cpp  obj_predictor.cpp  raycast.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/ego_planner/: ego_replan_fsm.h  planner_manager.h
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
src/planner/plan_manage/launch/: advanced_param.launch.py  advanced_param.xml  advanced_param_exp.xml  default.rviz  run_in_exp.launch  run_in_sim.launch  run_in_sim.launch.py  rviz.launch.py  simulator.launch.py  simulator.xml  single_run_in_sim.launch  single_run_in_sim.launch.py  swarm.launch  swarm.launch.py  swarm_large.launch.py
src/planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/planner/rosmsg_tcp_bridge/: CMakeLists.txt  package.xml
src/planner/rosmsg_tcp_bridge/launch/: bridge.launch  bridge.launch.py
src/planner/rosmsg_tcp_bridge/src/: bridge_node.cpp
src/planner/traj_utils/: CMakeLists.txt  package.xml
src/planner/traj_utils/include/traj_utils/: plan_container.hpp  planning_visualization.h  polynomial_traj.h
src/planner/traj_utils/msg/: Bspline.msg  DataDisp.msg  MultiBsplines.msg
src/planner/traj_utils/src/: planning_visualization.cpp  polynomial_traj.cpp
src/uav_simulator/Utils/cmake_utils/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/cmake_utils/cmake/: arch.cmake  cmake_modules.cmake  color.cmake
src/uav_simulator/Utils/cmake_utils/cmake_modules/: FindEigen.cmake  FindGSL.cmake  FindmvIMPACT.cmake
src/uav_simulator/Utils/multi_map_server/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/multi_map_server/msg/: MultiOccupancyGrid.msg  MultiSparseMap3D.msg  SparseMap3D.msg  VerticalOccupancyGridList.msg
src/uav_simulator/Utils/multi_map_server/src/: multi_map_visualization.cc
src/uav_simulator/Utils/odom_visualization/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/odom_visualization/src/: odom_visualization.cpp
src/uav_simulator/Utils/pose_utils/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/pose_utils/src/: pose_utils.cpp
src/uav_simulator/Utils/quadrotor_msgs/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/quadrotor_msgs/msg/: AuxCommand.msg  Corrections.msg  Gains.msg  LQRTrajectory.msg  Odometry.msg  OutputData.msg  PPROutputData.msg  PolynomialTrajectory.msg  PositionCommand.msg  SO3Command.msg  Serial.msg  StatusData.msg  TRPYCommand.msg
src/uav_simulator/Utils/quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
src/uav_simulator/Utils/uav_utils/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/uav_utils/include/uav_utils/: converters.h  (+2 more)
src/uav_simulator/Utils/uav_utils/scripts/: odom_to_euler.py  send_odom.py  tf_assist.py  topic_statistics.py
src/uav_simulator/Utils/uav_utils/src/: uav_utils_test.cpp
src/uav_simulator/Utils/waypoint_generator/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/waypoint_generator/src/: waypoint_generator.cpp
src/uav_simulator/fake_drone/: CMakeLists.txt  package.xml
src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
src/uav_simulator/local_sensing/: CMakeLists.txt  package.xml
src/uav_simulator/local_sensing/CMakeModules/: FindCUDA.cmake  FindEigen.cmake  FindEigen.cmake~
src/uav_simulator/local_sensing/CMakeModules/FindCUDA/: run_nvcc.cmake
src/uav_simulator/local_sensing/cfg/: local_sensing_node.cfg
src/uav_simulator/local_sensing/config/: camera.yaml
src/uav_simulator/local_sensing/src/: AlignError.h  ceres_extensions.h  csv_convert.py  cuda_exception.cuh  depth_render.cu  depth_render.cuh  device_image.cuh  pcl_render_node.cpp  pointcloud_render_node.cpp
src/uav_simulator/map_generator/: CMakeLists.txt  package.xml
src/uav_simulator/map_generator/src/: random_forest_sensing.cpp
src/uav_simulator/mockamap/: CMakeLists.txt  package.xml
src/uav_simulator/mockamap/config/: rviz.rviz
src/uav_simulator/mockamap/include/mockamap/: maps.hpp  perlinnoise.hpp
src/uav_simulator/mockamap/launch/: maze2d.launch.py  maze3d.launch.py  mockamap.launch.py  perlin3d.launch.py  post2d.launch.py
src/uav_simulator/mockamap/src/: ces_randommap.cpp  maps.cpp  mockamap.cpp  perlinnoise.cpp
src/uav_simulator/so3_control/: CMakeLists.txt  package.xml
src/uav_simulator/so3_control/config/: corrections_hummingbird.yaml  gains_hummingbird.yaml  gains_pelican.yaml
src/uav_simulator/so3_control/include/so3_control/: SO3Control.hpp
src/uav_simulator/so3_control/src/: SO3Control.cpp  control_example.cpp  so3_control_component.cpp
src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt  package.xml
src/uav_simulator/so3_quadrotor_simulator/include/ode/: Jamroot  README
src/uav_simulator/so3_quadrotor_simulator/launch/: simulator_example.launch.py
src/uav_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
(+261 files in other folders)
