<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bspline_opt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ma@todo.todo">ma</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend> 
  <depend>std_msgs</depend> 
  <depend>visualization_msgs</depend> 
  <depend>nav_msgs</depend> 
  <depend>cv_bridge</depend> 
  <depend>plan_env</depend> 
  <depend>traj_utils</depend> 
  <depend>path_searching</depend> 
  <depend>PCL</depend> 
  <depend>pcl_conversions</depend> 
  <depend>Eigen3</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
